[gd_scene load_steps=12 format=2]

[ext_resource path="res://level4.gd" type="Script" id=1]
[ext_resource path="res://fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/OpenSans-ExtraBoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://imgs/box(2).png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 7
outline_color = Color( 0, 0.301961, 0.443137, 1 )
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80.2286, 35.3764 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44.4908, 42.0435 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 81.5684, 40.6819 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 53.5823, 49.1967 )

[node name="level4" type="Node2D"]
position = Vector2( -11.3918, -10.3218 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 119.606, 70.0269 )
scale = Vector2( 0.266628, 0.266628 )
frames = SubResource( 1 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 968.48, 532.555 )
scale = Vector2( 0.266628, 0.266628 )
frames = SubResource( 1 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 129.128, 544.798 )
scale = Vector2( 0.266628, 0.266628 )
frames = SubResource( 1 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 958.957, 83.6307 )
scale = Vector2( 0.266628, 0.266628 )
frames = SubResource( 1 )

[node name="challenge" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 433.155
margin_top = 31.8385
margin_right = 618.155
margin_bottom = 100.839
custom_fonts/font = SubResource( 2 )
text = "12 x 8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supIzquierdo" type="Area2D" parent="."]
position = Vector2( 34.7231, -23.1266 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="supIzquierdo"]
position = Vector2( 84.9846, 93.4157 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="supIzquierdo"]
anchor_left = 0.431
anchor_right = 0.431
margin_left = -12.1802
margin_top = 51.6368
margin_right = 172.82
margin_bottom = 127.637
custom_fonts/font = SubResource( 4 )
text = "95"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supDerecha" type="Area2D" parent="."]
position = Vector2( 94.9248, -7.17823 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="supDerecha"]
position = Vector2( 867.94, 88.8297 )
shape = SubResource( 5 )

[node name="Label2" type="Label" parent="supDerecha"]
margin_left = 780.158
margin_top = 55.6467
margin_right = 954.158
margin_bottom = 127.647
custom_fonts/font = SubResource( 4 )
text = "108"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infIzquierda" type="Area2D" parent="."]
position = Vector2( -2.43505, 44.4149 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="infIzquierda"]
position = Vector2( 136.225, 496.264 )
shape = SubResource( 6 )

[node name="Label3" type="Label" parent="infIzquierda"]
margin_left = 36.1864
margin_top = 455.921
margin_right = 232.187
margin_bottom = 536.921
custom_fonts/font = SubResource( 4 )
text = "96"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infDerecha" type="Area2D" parent="."]
position = Vector2( 135.874, 15.3894 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="infDerecha"]
position = Vector2( 836.479, 514.472 )
shape = SubResource( 7 )

[node name="Label4" type="Label" parent="infDerecha"]
margin_left = 747.896
margin_top = 480.941
margin_right = 916.896
margin_bottom = 550.941
custom_fonts/font = SubResource( 4 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="supIzquierdo" to="." method="_on_supIzquierdo_area_entered4"]
[connection signal="area_entered" from="supDerecha" to="." method="_on_supDerecha_area_entered4"]
[connection signal="area_entered" from="infIzquierda" to="." method="_on_infIzquierda_area_entered4"]
[connection signal="area_entered" from="infDerecha" to="." method="_on_infDerecha_area_entered4"]
